Add CLI tooling
